using System.Diagnostics;

namespace RepositoryLinter;

public class Git
{
    public string ParentDirectory { get; }
    public bool SaveToDisk { get; set; } = false;
    private readonly Uri _url = null!;
    // Get name of the repository
    public readonly string RepositoryName;
    public string PathToGitDirectory { get; }
    
    /// <summary>
    /// Creates a new Git object with a URL
    /// </summary>
    /// <param name="url">Url to a Git repository</param>
    /// <param name="config">A GlobalConfiguration object</param>
    public Git(Uri url, GlobalConfiguration config)
    {
        if (!Directory.Exists(config.PathToSaveGitRepos))
        {
            Directory.CreateDirectory(config.PathToSaveGitRepos);
        }
           
        ParentDirectory = config.PathToSaveGitRepos;
        _url = url;
        RepositoryName = Path.GetFileName(_url.LocalPath);
        PathToGitDirectory = Path.Join(ParentDirectory, RepositoryName);
    }

    public Git(string localPath)
    {
        if (!Directory.Exists(localPath))
        {
            throw new DirectoryNotFoundException("Path does not exist");
        }
        
        // Check if the path is a git repository
        if (!Directory.Exists(Path.Join(localPath, ".git")))
        {
            throw new Exception("Path is not a git repository");
        }
        
        // Split the path to get the directory and the repository name
        RepositoryName = Path.GetFileName(localPath);
        ParentDirectory = Path.GetDirectoryName(localPath)!;
        PathToGitDirectory = localPath;
        SaveToDisk = true;
    }
    
    ~Git()
    {
        if (!SaveToDisk)
        {
            DeleteGitDirectory();
        }
    }
    
    /// <summary>
    /// Removes the cloned git repository
    /// </summary>
    private void DeleteGitDirectory()
    {
        Directory.Delete(PathToGitDirectory, true);
    }

    /// <summary>
    /// Clones the Git repository to the specified directory.
    /// </summary>
    /// <exception cref="Exception">Thrown when the git clone process fails to start or the clone operation fails.</exception>
    public void Clone()
    {
        // Check if the repository already exists, if so, delete it
        if (Directory.Exists(PathToGitDirectory))
        {
            DeleteGitDirectory();
        }
        
        // Clone the repository using git command
        var p = new Process
        {
            StartInfo =
            {
                FileName = "git",
                Arguments = $"clone {_url} {PathToGitDirectory}",
                RedirectStandardOutput = true,
                RedirectStandardError = true,
                UseShellExecute = false,
                CreateNoWindow = true
            }
        };
        
        var started = p.Start();
        if (!started)
        {
            throw new Exception("Failed to start git clone");
        }
        
        p.WaitForExit();
        
        if (p.ExitCode != 0)
        {
            throw new Exception("Failed to clone git repository");
        }
    }
    
    public int GetCommitCount()
    {
        var p = new Process
        {
            StartInfo =
            {
                FileName = "git",
                Arguments = $"rev-list --count HEAD",
                RedirectStandardOutput = true,
                RedirectStandardError = true,
                UseShellExecute = false,
                CreateNoWindow = true,
                WorkingDirectory = PathToGitDirectory
            }
        };
        
        var started = p.Start();
        if (!started)
        {
            throw new Exception("Failed to start git rev-list");
        }
        
        var output = p.StandardOutput.ReadToEnd();
        p.WaitForExit();
        
        return int.Parse(output);
    }
    
    /// <summary>
    /// Returns a list of contributors to the repository
    /// </summary>
    /// <returns>A list of contributors</returns>
    /// <exception cref="Exception">Failed to run git command</exception>
    public IEnumerable<string> GetContributors()
    {
        var p = new Process
        {
            StartInfo =
            {
                FileName = "git",
                Arguments = $"shortlog -sne HEAD",
                RedirectStandardOutput = true,
                RedirectStandardError = true,
                UseShellExecute = false,
                CreateNoWindow = true,
                WorkingDirectory = PathToGitDirectory
            }
        };
        
        var started = p.Start();
        if (!started)
        {
            throw new Exception("Failed to start git shortlog");
        }
        
        var output = p.StandardOutput.ReadToEnd();
        p.WaitForExit();

        var lines = output.Split("\n");
        var contributors = new List<string>();

        foreach (var line in lines)
        {
            var tmp = line.Trim();
            if (tmp.Length == 0)
            {
                continue;
            }
            
            contributors.Add(tmp.Split("\t")[1].Trim());

        }
        
        return contributors;
    }
}